<resources>
    <string name="app_name">Unicor</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario Administrador</string>
    <string name="nav_header_subtitle">libardo.unicor@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>

    <string name="menu_cliente">Clientes</string>
    <string name="menu_consultar_cita">Consultar cita</string>
    <string name="menu_agendar_cita">Agendar cita</string>
    <string name="menu_consultar_proceso">Consultar proceso</string>
    <string name="menu_crear_proceso">Crear proceso</string>
    <string name="menu_crear_usuarios">Crear usuario</string>
</resources>