<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_cliente" />
        <item
            android:id="@+id/nav_citas_consultar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_consultar_cita" />
        <item
            android:id="@+id/nav_citas_agendar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_agendar_cita" />
        <item
            android:id="@+id/nav_usuario_nuevo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_crear_usuarios" />
        <item
            android:id="@+id/nav_"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_crear_proceso" />

    </group>
</menu>